@@ -2356,6 +2356,9 @@ Tcl_AppendFormatToObj(
 	    }
 	    if (width) {
 		p += sprintf(p, "%d", width);
+		if (width > length) {
+		    length = width;
+		}
 	    }
 	    if (gotPrecision) {
 		*p++ = '.';
