@@ -1,3 +1,9 @@
+2009-07-31  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclStringObj.c:       Corrected failure to grow buffer
+	* tests/format.test:            when format spec request large width
+	floating point values.  Thanks to Clemens Misch.  [Bug 2830354]
+
 2009-07-24  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclIO.c (Tcl_GetChannelHandle): [Bug 2826248]: Do not crash
